--- a/tests/CTestCustom.template
+++ b/tests/CTestCustom.template
@@ -70,6 +70,8 @@ else()
   set(CTEST_CUSTOM_POST_TEST ${CTEST_CUSTOM_POST_TEST} "__python__ \"__cmake_current_source_dir__/test_pretty_print.py\" --builddir=__cmake_current_binary_dir__ __openscad_upload_tests__")
 endif()
 
+set(CTEST_CUSTOM_PRE_TEST "/home/jlewin/repo/openscad/tests/init_json.py")
+
 if ( ${debug_openscad_template} )
   foreach(post_test ${CTEST_CUSTOM_POST_TEST} )
     message("Post test:" ${post_test})
